--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<h2>Hola Mundo</h2>
 	<button type="button" id="btn">click</button>
 	<div>{{lugar}}</div>
+	<div class="contenedor"></div>
 	<div id="map"></div>
 	
 	<script type="text/javascript" src="jquery-3.1.1.min.js"></script>
